# actions-hugoify-api-docs

./: .gitignore  Dockerfile  README.md  action.yml  install_hugoify.sh  main.py  pyproject.toml
.github/workflows/: integration.yml  python.yml
hugoify/: __init__.py  cleanup.py  exceptions.py  htmlify.py  main.py  markdownify.py  parser.py  parser_utils.py  utils.py  xslt.py
hugoify/xslt/: abstract.xslt  classes.xslt  frontmatter.xslt  rendered.xslt
samples/input/: GENERATED_c_api.xml  GENERATED_cpp_api.xml  GENERATED_python_api.xml
samples/output/: GENERATED_c_api-processed.xml  GENERATED_cpp_api-processed.xml  GENERATED_python_api-processed.xml
